# inputbox

./: Cargo.toml  README.md
examples/: macos.rs  multiline.rs  simple.rs
src/: lib.rs
src/backend/: general.rs  inputbox.jxa.js  ios.rs  macos.rs  mod.rs  ohos.rs  unix.rs  windows.rs
src/backend/macos/: inputbox.jxa.js  mod.rs
src/backend/windows/: inputbox.ps1
