[package]
name = "inputbox"
version = "0.0.1"
edition = "2021"
authors = ["Mivik <mivikq@gmail.com>", "sjfhsjfh <sjfhsjfh@qq.com>"]
description = "A cross-platform, native GUI input box."
license = "MIT"
repository = "https://github.com/Mivik/inputbox"
homepage = "https://github.com/Mivik/inputbox"
documentation = "https://docs.rs/inputbox"
categories = ["gui", "command-line-interface"]
keywords = ["ui", "dialog", "input", "native"]
rust-version = "1.71.0"

[lib]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multiline"
path = "examples/multiline.rs"

[dependencies]
cfg-if = "1.0.4"
log = "0.4.29"
serde_json = "1.0"
which = "8.0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
once_cell = "1.21.3"

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"

[target.'cfg(target_env = "ohos")'.dependencies]
napi-derive-ohos = { version = "1.1.3" }
napi-ohos = { version = "1.1.3", default-features = false, features = [
    "napi8",
    "async",
] }
